--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-tensorflow>=2.20.0
+tensorflow==2.20.0
+keras>=3.10.0
 scikit-learn==1.6.1
-numpy==1.26.4
+numpy>=2.1.0
 pandas==2.3.2
 streamlit==1.49.0
 transformers==4.44.2
