--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ scikit-learn==1.6.1
 numpy>=2.1.0
 pandas==2.3.2
 streamlit==1.49.0
-transformers==4.44.2
+transformers>=4.45.0
 datasets==3.0.1
 accelerate==0.34.2
-tokenizers>=0.20.0
