--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-tensorflow==2.20.0
-keras>=3.10.0
-scikit-learn==1.6.1
-numpy>=2.1.0
-pandas==2.3.2
-streamlit==1.49.0
-transformers>=4.45.0
-datasets==3.0.1
-accelerate==0.34.2
-matplotlib==3.9.2
-seaborn==0.13.2
-gdown==5.2.0
+tensorflow==2.13.0
+scikit-learn==1.3.2
+numpy==1.24.3
+pandas==2.0.3
+streamlit==1.26.0
+transformers==4.31.0
+datasets==2.14.5
+accelerate==0.21.0
+matplotlib==3.7.2
+seaborn==0.12.2
+gdown==4.7.1
